feat: just playing with the style :)

--- a/index.html
+++ b/index.html
@@ -23,30 +23,30 @@
         <div id="game-container">
             <div id="keroppi-container">
                 <img src="assets/images/Group 9(1).svg" alt="Keroppi " id="keroppi-image">
-                <img src="assets/images/falda.svg" alt="falda" id="falda-image">
+                <img  alt="falda" id="falda-image">
             </div>  
             <div id="tabs-container">
-                <div id="clothes">C</div>
-                <div id="head-accesories">hA</div>
-                <div id="hand-accesories">hA</div>
-                <div id="keroppi-background">b</div>
+                <div id="clothes" class="options">C</div>
+                <div id="head-accesories" class="options">hA</div>
+                <div id="hand-accesories" class="options">hA</div>
+                <div id="keroppi-background" class="options">b</div>
             </div>
             <div id="options-container">
                 <div id="clothes-options" >
                     <div id="bubble">
-                        <img src="assets/images/falda.svg" alt="falda" class="clothes-image">
+                        <img id="first-option" src="assets/images/falda.svg" alt="falda" class="clothes-image">
                     </div>
                     <div id="bubble">
-                        <img src="assets/images/falda.svg" alt="falda" class="clothes-image">
+                        <img id="second-option" src="assets/images/falda.svg" alt="falda" class="clothes-image">
                     </div>
                     <div id="bubble">
-                        <img src="assets/images/falda.svg" alt="falda" class="clothes-image">
+                        <img id="third-option" src="assets/images/falda.svg" alt="falda" class="clothes-image">
                     </div>
                 </div>
 
                 <div id="arrows-container">
-                    <button id="left-arrow" class="arrows">←</button>
-                    <button id="right-arrow" class="arrows">→</button>
+                    <div id="left-arrow" class="options">←</div>
+                    <div id="right-arrow" class="options">→</div>
     
                 </div>
             </div>
