feat: added new functionalily owo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div id="keroppi-container">
                 <img src="assets/images/Group 9(1).svg" alt="Keroppi " id="keroppi-image">
                 <img  alt="falda" id="falda-image">
+                <img alt="head" id="head-image">
             </div>  
             <div id="tabs-container">
                 <div id="clothes" class="options">C</div>
@@ -33,20 +34,20 @@
             </div>
             <div id="options-container">
                 <div id="clothes-options" >
-                    <div id="bubble">
-                        <img id="first-option" src="assets/images/falda.svg" alt="falda" class="clothes-image">
+                    <div class="bubble">
+                        <img id="first-option" src="assets/images/keroppi-clothes/falda.svg" alt="falda" class="slideOption clothes-image">
                     </div>
-                    <div id="bubble">
-                        <img id="second-option" src="assets/images/falda.svg" alt="falda" class="clothes-image">
+                    <div class="bubble">
+                        <img id="second-option" src="assets/images/keroppi-clothes/black-skirt.svg" alt="falda" class="slideOption clothes-image">
                     </div>
-                    <div id="bubble">
-                        <img id="third-option" src="assets/images/falda.svg" alt="falda" class="clothes-image">
+                    <div class="bubble">
+                        <img id="third-option" src="assets/images/keroppi-clothes/stripes-skirt.svg" alt="falda" class="slideOption clothes-image">
                     </div>
                 </div>
 
                 <div id="arrows-container">
-                    <div id="left-arrow" class="options">←</div>
-                    <div id="right-arrow" class="options">→</div>
+                    <img id="left-arrow"  src="./assets/images/img-elements/left-arrow.svg"></img>
+                    <img id="right-arrow"  src="./assets/images/img-elements/right-arrow.svg"></img>
     
                 </div>
             </div>
