feat: added face accesories and some new features

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase:wght@400;700&display=swap" rel="stylesheet">
+    <link  
+    rel="icon" 
+    href="/assets/images/icon/keroppi-icon.ico" 
+    type="image/ico"
+ >
     <title>Keroppi</title>
 </head>
 <body>
@@ -24,12 +29,13 @@
             <div id="keroppi-container">
                 <img src="assets/images/Group 9(1).svg" alt="Keroppi " id="keroppi-image">
                 <img  alt="falda" id="falda-image">
-                <img alt="head" id="head-image">
+                <img alt="head" id="head-image" class="head-option">
+                <img alt ="face-accessory" id="face-accessory-image" class="face-option" src="assets/images/keroppi-clothes/face-accesories/sunglasses.png">
             </div>  
             <div id="tabs-container">
                 <div id="clothes" class="options">C</div>
                 <div id="head-accesories" class="options">hA</div>
-                <div id="hand-accesories" class="options">hA</div>
+                <div id="face-accesories" class="options">hA</div>
                 <div id="keroppi-background" class="options">b</div>
             </div>
             <div id="options-container">
