feat: added tabs images

--- a/index.html
+++ b/index.html
@@ -33,10 +33,27 @@
                 <img alt ="face-accessory" id="face-accessory-image" class="face-option" src="assets/images/keroppi-clothes/face-accesories/sunglasses.png">
             </div>  
             <div id="tabs-container">
-                <div id="clothes" class="options">C</div>
-                <div id="head-accesories" class="options">hA</div>
-                <div id="face-accesories" class="options">hA</div>
-                <div id="keroppi-background" class="options">b</div>
+                <div id="clothes" class="options">
+                    <img 
+                    src="assets/images/keroppi-clothes/falda.svg"
+                    class="tab-image">
+                </div>
+                <div id="head-accesories" class="options">
+                    <img 
+                    src="assets/images/keroppi-clothes/head-accesories/flowers.svg"
+                    class="tab-image">
+                </div>
+                <div id="face-accesories" class="options">
+                    <img 
+                    src="assets/images/keroppi-clothes/face-accesories/eyeglasses2.png"
+                    class="tab-image">
+                </div>
+                <div id="keroppi-background" class="options">
+                    <img 
+                    id="background-image-tab"
+                    src="assets/images/Background5.svg"
+                    class="tab-image">
+                </div>
             </div>
             <div id="options-container">
                 <div id="clothes-options" >
