finally done with the update background function

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
             <h1 id="title">Help Keroppi get ready for the day!</h1>
         </div>
         <div id="buttons-container">
-            <div id="start-button" class="options">🎵</div>
+            <div id="music-button" class="options">
+                <img alt="music icon" id="music-icon">
+            </div>
             <div id="reset-button" class="options">Reset</div>
             <div id="help-button" class="options">Help</div>
 
         </div>
         <div id="game-container">
             <div id="keroppi-container">
-                <img src="assets/images/Group 9(1).svg" alt="Keroppi " id="keroppi-image">
+                <img src="assets/images/keroppi.svg" alt="Keroppi " id="keroppi-image">
                 <img  alt="falda" id="falda-image">
                 <img alt="head" id="head-image" class="head-option">
                 <img alt ="face-accessory" id="face-accessory-image" class="face-option" src="assets/images/keroppi-clothes/face-accesories/sunglasses.png">
@@ -35,23 +37,23 @@
             <div id="tabs-container">
                 <div id="clothes" class="options">
                     <img 
-                    src="assets/images/keroppi-clothes/falda.svg"
+                    src="assets/images/img-elements/tabs-images/default-skirt.svg"
                     class="tab-image">
                 </div>
                 <div id="head-accesories" class="options">
                     <img 
-                    src="assets/images/keroppi-clothes/head-accesories/flowers.svg"
+                    src="assets/images/img-elements/tabs-images/default-headband.svg"
                     class="tab-image">
                 </div>
                 <div id="face-accesories" class="options">
                     <img 
-                    src="assets/images/keroppi-clothes/face-accesories/eyeglasses2.png"
+                    src="assets/images/img-elements/tabs-images/default-sunglasses.svg"
                     class="tab-image">
                 </div>
                 <div id="keroppi-background" class="options">
                     <img 
                     id="background-image-tab"
-                    src="assets/images/Background5.svg"
+                    src="assets/images/img-elements/tabs-images/default-background2.svg"
                     class="tab-image">
                 </div>
             </div>
